--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,8 @@ jobs:
           python -m py_compile $(find . -name "*.py")
 
       - name: Confirm FastAPI loads successfully
+        env:
+          OPENAI_API_KEY: "dummy"
         run: |
           python - << 'EOF'
           import app
